# compiler

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE  config.json
.zed/: debug.json  settings.json  tasks.json
src/: error.cpp  error.hpp  evaluate.cpp  evaluate.hpp  grammer.cpp  grammer.hpp  lexer.cpp  lexer.hpp  llvm_ir.cpp  llvm_ir.hpp  main.cpp  string_pool.cpp  string_pool.hpp  symbol_table.cpp  symbol_table.hpp  token.cpp  token.hpp  visitor.cpp  visitor.hpp
src/codegen/: DescDefs.hpp  FillFrame.cpp  FillFrame.hpp  IRTranslator.cpp  IRTranslator.hpp  LinerScanRegisterAlloc.cpp  LinerScanRegisterAlloc.hpp  MIRPrinter.cpp  MIRPrinter.hpp  MachineBasicBlock.cpp  MachineBasicBlock.hpp  MachineFunction.cpp  MachineFunction.hpp  MachineFunctionPass.cpp  MachineFunctionPass.hpp  MachineInstr.cpp  MachineInstr.hpp  MachineModule.cpp  MachineModule.hpp  MachineOperand.cpp  MachineOperand.hpp  MipsMachineMulDivOpt.cpp  MipsPrinter.cpp  MipsPrinter.hpp  MovePropagation.cpp  MovePropagation.hpp  RegDefs.hpp  Register.hpp  RegisterInfo.hpp  ReplaceRegister.cpp  ReplaceRegister.hpp
src/ir/: AsmWriter.cpp  BasicBlock.cpp  BasicBlock.hpp  Constants.cpp  Constants.hpp  DataLayout.hpp  Function.cpp  Function.hpp  GlobalValue.cpp  GlobalValue.hpp  IRBuilder.hpp  IRPrinter.cpp  IRPrinter.hpp  IRWriter.cpp  IRWriter.hpp  Instructions.cpp  Instructions.hpp  LLVMContext.cpp  LLVMContext.hpp  LLVMContextImpl.cpp  LLVMContextImpl.hpp  Module.cpp  Module.hpp  Pass.cpp  Pass.hpp  Type.cpp  Type.hpp  Use.cpp  Use.hpp  User.hpp  Value.cpp  Value.hpp  ValueSymbolTable.cpp  ValueSymbolTable.hpp  WellForm.cpp  WellForm.hpp
src/opt/: CheckUseList.cpp  (+17 more)
test/: CMakeLists.txt  test_lexer.cpp  test_scope_hash_set.cpp  test_symbol_table.cpp
(+33 files in other folders)
